1999-01-14  Tom Tromey  <tromey@cygnus.com>

	* texi-vers.am ($(srcdir)/stamp-@VTI@): Find @TEXI@ in srcdir.
	From Alexandre Oliva and Erez Zadok.

	* automake.in (create): Renamed from touch.
	(handle_configure): Use create, not touch.

	* config.sub, config.guess: New versions from autoconf.

	* mkinstalldirs: New version from autoconf.

1999-01-12  Tom Tromey  <tromey@cygnus.com>

	* config.sub, config.guess, COPYING, texinfo.tex: New versions
	from FSF.

1999-01-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* automake.in (PATH_PATTERN): New variable:
	(INCLUDE_PATTERN): Use it.  Ignore all include commands using 
	symbols besides $(top_srcdir) and $(srcdir).

1999-01-11  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_dist_worker): avoid failure in `make dist'
	if last file is a builddir-only file

1999-01-11  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* missing (autoheader): `s' was missing from sed script; grr

1999-01-11  Tom Tromey  <tromey@cygnus.com>

	* remake-hdr.am (@STAMP@): Reverted timestamp change.
	($(srcdir)/@STAMP@.in): Likewise.

1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (scriptdir): New macro.
	(script_DATA): Likewise.
	(install-data-hook): Use them.
	(EXTRA_DIST): Added script_DATA.
	(installcheck-local): Use script_DATA.

	* Makefile.am (pkgdata_DATA): Removed duplicate definition.

1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* missing (autoheader): accept multiple header files
	(automake): simplify sed processing

1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_configure, stamp_dir): create only one stamp
	file per header, instead of one in the top-level directory and one
	in the directory that contains the header.

1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (lang_objc_finish): Formatting fix.

	* automake.in (objc_extensions): New sub.
	(handle_dependencies): Only generate dependency-tracking code for
	ObjC when ObjC source seen.
