@@ -1939,6 +1939,7 @@ sub handle_texinfo
 	    else
 	    {
 		$conf_dir = $config_aux_dir;
+		$conf_dir .= '/' unless $conf_dir =~ /\/$/;
 	    }
 	    ($conf_pat = $conf_dir) =~ s/(\W)/\\$1/g;
 	    $output_rules .=
