@@ -1,5 +1,9 @@
 1999-01-14  Tom Tromey  <tromey@cygnus.com>
 
+	* automake.in (handle_texinfo): Add `/' to end of $conf_dir.
+
+	* Makefile.am (AUTOMAKE_OPTIONS): Added `1.4'.
+
 	* texi-vers.am ($(srcdir)/stamp-@VTI@): Find @TEXI@ in srcdir.
 	From Alexandre Oliva and Erez Zadok.
 
